@@ -1,3 +1,6 @@
+2013-01-12 Graeme Gott <graeme@gottcode.org>
+	* Add loading extra spellings of words.
+
 2013-01-09 Graeme Gott <graeme@gottcode.org>
 	* Add version number to saved game.
 	* Use random class from Tanglet.
